--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ apply plugin: 'kotlin-android-extensions'
 android {
     compileSdkVersion 28
     defaultConfig {
-        applicationId "info.gdbtech.greg.myapplicationii"
+        applicationId "info.gdbtech.greg.blobandroid"
         minSdkVersion 15
         targetSdkVersion 28
         versionCode 1
