--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="info.gdbtech.greg.myapplicationii">
+          package="info.gdbtech.greg.blobandroid">
 
     <application
             android:allowBackup="true"
@@ -9,7 +9,7 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity"
+        <activity android:name="info.gdbtech.greg.blobandroid.MainActivity"
                   android:screenOrientation="nosensor"
                   android:configChanges="screenSize">
             <intent-filter>
