Reformat the XML project files.

--- a/gradle.properties
+++ b/gradle.properties
@@ -13,3 +13,7 @@ org.gradle.jvmargs=-Xmx1536m
 # org.gradle.parallel=true
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
+# R8 is available with Android Studio 3.3 beta and works with Proguard rules.
+# R8 does all of shrinking, desugaring and dexing in one step. When comparing to the current code shrinking solution,
+# Proguard, R8 shrinks the code faster while improving the output size.
+android.enableR8=true
