--- a/gradle.properties
+++ b/gradle.properties
@@ -17,3 +17,6 @@ kotlin.code.style=official
 # R8 does all of shrinking, desugaring and dexing in one step. When comparing to the current code shrinking solution,
 # Proguard, R8 shrinks the code faster while improving the output size.
 android.enableR8=true
+# Better debug info when using obsolete API: When the plugin detects that you're using an API that's no longer
+# supported, it can now provide more-detailed information to help you determine where that API is being used.
+android.debug.obsoleteApi=true
