--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
             android:label="@string/app_name"
             android:roundIcon="@mipmap/blob_face_round"
             android:supportsRtl="true"
+            android:hardwareAccelerated="true"
             android:theme="@style/AppTheme">
         <activity android:name=".MainActivity"
                   android:screenOrientation="nosensor"
