--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="info.gdbtech.greg.blobandroid">
+          package="dev.eakin.blob">
 
     <application
             android:allowBackup="true"
@@ -19,10 +19,4 @@
             </intent-filter>
         </activity>
     </application>
-    <!--
-    <uses-permission
-            android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-    <uses-permission
-            android:name="android.permission.READ_EXTERNAL_STORAGE"/>
-            -->
 </manifest>
