--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,8 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
+apply from: "versions.gradle"
 
 buildscript {
-    ext.kotlin_version = '1.3.61'
+    apply from: "versions.gradle"
+    
     repositories {
         google()
         jcenter()
@@ -16,8 +17,9 @@ buildscript {
 
 allprojects {
     repositories {
-        google()
+        mavenLocal()
         jcenter()
+        google()
     }
 }
 
