--- a/versions.gradle
+++ b/versions.gradle
@@ -1,7 +1,7 @@
 ext {
     // Kotlin
     kotlin_version = '1.3.61'
-    koin_version = '2.0.1'
+    koin_version = '2.1.0-alpha-8'
 
     // Android Sdk and tools
     minSdkVersion = 14
