--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
           package="dev.eakin.blob">
 
     <application
+            android:name=".BlobApplication"
             android:allowBackup="true"
             android:icon="@mipmap/blob_face"
             android:label="@string/app_name"
